--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,7 +26,13 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        
+           <activity android:name=".AboutActivity"
+                  android:label="@string/about_title">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>     
 	   <service android:name=".PlayerService" />
     </application>
 
