--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.ajaxie.lastfm"
-      android:versionCode="1"
-      android:versionName="1.0.0">
+      android:versionCode="4"
+      android:versionName="0.8.4">
     <uses-permission android:name="android.permission.INTERNET" />
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:icon="@drawable/lastfm_icon" android:label="@string/app_name">
         <activity android:name=".LastFMPlayer"
                   android:label="@string/app_name">
             <intent-filter>
@@ -33,7 +33,18 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>     
-	   <service android:name=".PlayerService" />
+	   <service android:name=".PlayerService">
+		<intent-filter>
+              <action android:name="android.intent.action.VIEW" />
+              <category android:name="android.intent.category.DEFAULT" />
+              <data android:scheme="lastfm"/>
+		</intent-filter>	   
+		<intent-filter>
+              <action android:name="android.intent.action.VIEW" />
+              <category android:name="android.intent.category.BROWSABLE" />
+              <data android:scheme="lastfm"/>
+		</intent-filter>	   
+	   </service>
     </application>
 
 </manifest> 
