--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.ajaxie.lastfm"
-      android:versionCode="4"
-      android:versionName="0.8.4">
+      android:versionCode="5"
+      android:versionName="0.8.5">
     <uses-permission android:name="android.permission.INTERNET" />
     <application android:icon="@drawable/lastfm_icon" android:label="@string/app_name">
         <activity android:name=".LastFMPlayer"
@@ -14,6 +14,27 @@
         </activity>
         <activity android:name=".UserInfo"
                   android:label="@string/user_info_title">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".EnterArtistName"
+                  android:label="@string/enter_artist_name_title">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".EnterTag"
+                  android:label="@string/enter_tag_title">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".Tune"
+                  android:label="@string/tune">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
