--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.ajaxie.lastfm"
-      android:versionCode="7"
-      android:versionName="0.8.5p2">
+      android:versionCode="8"
+      android:versionName="0.8.6">
     <uses-permission android:name="android.permission.INTERNET" />
     <application android:icon="@drawable/lastfm_icon" android:label="@string/app_name">
         <activity android:name=".LastFMPlayer"
@@ -19,6 +19,13 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity android:name=".Settings"
+                  android:label="@string/settings_title">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
         <activity android:name=".EnterArtistName"
                   android:label="@string/enter_artist_name_title">
             <intent-filter>
@@ -28,6 +35,13 @@
         </activity>
         <activity android:name=".EnterTag"
                   android:label="@string/enter_tag_title">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".ChooseFriendActivity"
+                  android:label="@string/choose_friend_title">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
