--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.ajaxie.lastfm"
       android:versionCode="8"
-      android:versionName="0.8.6">
+      android:versionName="0.8.6" package="com.ajaxie.lastfm">
     <uses-permission android:name="android.permission.INTERNET" />
     <application android:icon="@drawable/lastfm_icon" android:label="@string/app_name">
         <activity android:name=".LastFMPlayer"
